--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Resources/ScienceDefs.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Resources/ScienceDefs.cfg
@@ -52,7 +52,7 @@ EXPERIMENT_DEFINITION
 	{
 		default = #autoLOC_TST_0198 //The spectrometer confirms that the sample is indeed a combination of elements.
 		default = #autoLOC_TST_0199 //The spectrometer data is nonsense, who thought firing a laser at a rock was actually a good idea.
-		default = #autoLOC_TST_0200 /Shooting rocks is fun, lets do it again...what?! this is a science experiment?
+		default = #autoLOC_TST_0200 //Shooting rocks is fun, lets do it again...what?! this is a science experiment?
 
 		KerbinSrfLandedGrasslands = #autoLOC_TST_0201 //The spectrum shows large quantities of water and organic matter...you may have just shot an insect
 		KerbinSrfLandedHighlands = #autoLOC_TST_0202 //The spectrum shows peaks at Silicon, Aluminium and Oxygen.
